--- a/CarsPartsReconstruccion/CarsPartsReconstruccion.csproj
+++ b/CarsPartsReconstruccion/CarsPartsReconstruccion.csproj
@@ -488,6 +488,7 @@
     <Content Include="Views\SupplierPiece\Edit.cshtml" />
     <Content Include="Views\SupplierPiece\Delete.cshtml" />
     <Content Include="Views\SupplierPiece\IndexPiece.cshtml" />
+    <Content Include="Views\SupplierPart\IndexPart.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Filters\" />
