Globalize in the web.config the parameters hard coded (id of the company)
Globalize in the web.config the parameters hard coded (id of the
company)

--- a/CarsPartsReconstruccion/Web.config
+++ b/CarsPartsReconstruccion/Web.config
@@ -18,6 +18,8 @@
     <add key="PreserveLoginUrl" value="true" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <add key="DefaultCreateReconstructionStatus" value="27"/>
+    <add key="CarPartReconstructionId" value="4"/>
   </appSettings>
   <system.web>
     <!--  <customErrors mode="On">  </customErrors>-->
