--- a/CarsPartsReconstruccion/bin/CarsPartsReconstruccion.dll.config
+++ b/CarsPartsReconstruccion/bin/CarsPartsReconstruccion.dll.config
@@ -18,6 +18,8 @@
     <add key="PreserveLoginUrl" value="true" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <add key="DefaultCreateReconstructionStatus" value="27"/>
+    <add key="CarPartReconstructionId" value="4"/>
   </appSettings>
   <system.web>
     <!--  <customErrors mode="On">  </customErrors>-->
