--- a/CarsPartsReconstruccion/CarsPartsReconstruccion.csproj
+++ b/CarsPartsReconstruccion/CarsPartsReconstruccion.csproj
@@ -496,6 +496,7 @@
     <Content Include="Views\SupplierPart\_PartSuppliers.cshtml" />
     <Content Include="Views\Users\Index.cshtml" />
     <Content Include="Views\Users\Edit.cshtml" />
+    <Content Include="Views\Service\_ServiceList.cshtml" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
