--- a/CarsPartsReconstruccion/Views/Web.config
+++ b/CarsPartsReconstruccion/Views/Web.config
@@ -17,6 +17,10 @@
         <add namespace="System.Web.Mvc.Html" />
         <add namespace="System.Web.Optimization"/>
         <add namespace="System.Web.Routing" />
+
+        <add namespace="PagedList.Mvc" />
+        <add namespace="PagedList" />
+        <add namespace="CarsPartsReconstruccion.Models" />
       </namespaces>
     </pages>
   </system.web.webPages.razor>
