--- a/CarsPartsReconstruccion/bin/CarsPartsReconstruccion.dll.config
+++ b/CarsPartsReconstruccion/bin/CarsPartsReconstruccion.dll.config
@@ -20,6 +20,7 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <add key="DefaultCreateReconstructionStatus" value="27" />
     <add key="CarPartReconstructionId" value="4" />
+    <add key="PresentYear" value="2016" />
   </appSettings>
   <system.web>
     <!--  <customErrors mode="On">  </customErrors>-->
