--- a/CarsPartsReconstruccion/CarsPartsReconstruccion.csproj
+++ b/CarsPartsReconstruccion/CarsPartsReconstruccion.csproj
@@ -199,6 +199,7 @@
     <Compile Include="Controllers\PartController.cs" />
     <Compile Include="Controllers\PieceController.cs" />
     <Compile Include="Controllers\ReplacedPartController.cs" />
+    <Compile Include="Controllers\ReplacedPieceController.cs" />
     <Compile Include="Controllers\ServiceCarController.cs" />
     <Compile Include="Controllers\ServiceController.cs" />
     <Compile Include="Controllers\ServicePartController.cs" />
@@ -207,6 +208,7 @@
     <Compile Include="Controllers\SupplierPieceController.cs" />
     <Compile Include="Controllers\UsersController.cs" />
     <Compile Include="Filters\LogAttribute.cs" />
+    <Compile Include="Models\Metadata\ReplacedPieceMetadata.cs" />
     <Compile Include="Models\Metadata\ServicePartMetadata.cs" />
     <Compile Include="Models\Metadata\ServiceCarMetadata.cs" />
     <Compile Include="Models\Metadata\ReplacedPartMetadata.cs" />
@@ -510,6 +512,12 @@
     <Content Include="Views\ServicePart\Edit.cshtml" />
     <Content Include="Views\ServicePart\Delete.cshtml" />
     <Content Include="Views\ServicePart\_ServicePart.cshtml" />
+    <Content Include="Views\ReplacedPiece\Index.cshtml" />
+    <Content Include="Views\ReplacedPiece\Details.cshtml" />
+    <Content Include="Views\ReplacedPiece\Create.cshtml" />
+    <Content Include="Views\ReplacedPiece\Edit.cshtml" />
+    <Content Include="Views\ReplacedPiece\Delete.cshtml" />
+    <Content Include="Views\ReplacedPiece\_ReplacedPiece.cshtml" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
